# RustRoom

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  routes.rs
static/: index.html  styles.css  webrtc.js
