[package]
name = "RustRoom"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"            # Web server for handling HTTP requests
actix-web-actors = "4"     # Add-on to handle WebSocket with actors
tokio = { version = "1", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # For serializing JSON
serde_json = "1.0"         # JSON parsing and generation
dotenv = "0.15"            # For reading .env config files
uuid = { version = "1", features = ["v4"] }     # Generate unique classroom/user IDs
futures = "0.3"            # Required for async processing
mime_guess = "2.0"         # For guessing content type (e.g., video stream)
actix-files = "0.6"        # For serving static HTML/CSS
axum = "0.7"
tower = "0.4" #Middleware utilities used by Axum.